--- a/public/todo.css
+++ b/public/todo.css
@@ -1,8 +1,76 @@
 body{
-    background: rgb(111, 148, 57);
+    background: rgb(0, 0, 0);
     color: white;
+    font-family: FiraSans,sans-serif;
+}
+.header{
+    text-align: center;
+    padding: 10px;
+}
+h1{
+    font-weight: 500;
 }
 .listData{
     display: flex;
     justify-content: space-evenly;
+}
+.listData div{
+    border:1px solid #ccc;
+    
+}
+
+h2{
+    text-align: center;
+    margin: 10px;
+    background: #0d6efd;
+    font-weight: 500;
+}
+table, th, td{
+    border-top:1px solid #ccc;
+    border-bottom:1px solid #ccc;
+}
+table{
+    border-collapse:collapse;
+    width:100%;
+}
+th, td{
+    text-align:left;
+    padding:10px;
+    font-family: 'Courier New', Courier, monospace;
+}
+.delete {
+    color: rgb(255, 255, 255);
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    border: none;
+    display: inline-block;
+    line-height: 1.5;
+    text-align: center;
+    border-radius: 10%;
+    width: 39px;
+    height: 39px;
+}
+.listsua button{
+    margin: 5px;
+}
+.modal-footer{
+    display: flex;
+    justify-content: space-between;
+}
+.btn-secondary{
+    background: rgb(206, 46, 46);
+}
+#exampleModalLabel,#staticBackdropLabel{
+    color: black;
+    font-weight: 600;
+}
+.modal-header{
+    justify-content: center;
+}
+input{
+    width: 100%;
+    margin: 10px 10px;
+}
+select{
+    margin: 10px 10px;
 }
