--- a/views/todo.html
+++ b/views/todo.html
@@ -22,8 +22,9 @@
         class="btn btn-primary"
         data-bs-toggle="modal"
         data-bs-target="#exampleModal"
+        id="exampleModalLabel-1"
       >
-        ADD NEW JOB
+        <span>ADD NEW JOB</span>
       </button>
     </div>
 
