--- a/public/todo.css
+++ b/public/todo.css
@@ -1,76 +1,114 @@
-body{
-    background: rgb(0, 0, 0);
-    color: white;
-    font-family: FiraSans,sans-serif;
+body {
+  background: rgb(0, 0, 0);
+  color: white;
+  font-family: FiraSans, sans-serif;
 }
-.header{
-    text-align: center;
-    padding: 10px;
+.header {
+  text-align: center;
+  padding: 10px;
 }
-h1{
-    font-weight: 500;
+h1 {
+  font-weight: 500;
 }
-.listData{
-    display: flex;
-    justify-content: space-evenly;
+.listData {
+  display: flex;
+  justify-content: space-evenly;
 }
-.listData div{
-    border:1px solid #ccc;
-    
+.listData div {
+  border: 1px solid #ccc;
 }
 
-h2{
-    text-align: center;
-    margin: 10px;
-    background: #0d6efd;
-    font-weight: 500;
+h2 {
+  text-align: center;
+  margin: 10px;
+  background: #0d6efd;
+  font-weight: 500;
 }
-table, th, td{
-    border-top:1px solid #ccc;
-    border-bottom:1px solid #ccc;
+table,
+th,
+td {
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
 }
-table{
-    border-collapse:collapse;
-    width:100%;
+table {
+  border-collapse: collapse;
+  width: 100%;
 }
-th, td{
-    text-align:left;
-    padding:10px;
-    font-family: 'Courier New', Courier, monospace;
+th,
+td {
+  text-align: left;
+  padding: 10px;
+  font-family: "Courier New", Courier, monospace;
 }
 .delete {
-    color: rgb(255, 255, 255);
-    background-color: #0d6efd;
-    border-color: #0d6efd;
-    border: none;
-    display: inline-block;
-    line-height: 1.5;
-    text-align: center;
-    border-radius: 10%;
-    width: 39px;
-    height: 39px;
+  color: rgb(255, 255, 255);
+  background-color: #0d6efd;
+  border-color: #0d6efd;
+  border: none;
+  display: inline-block;
+  line-height: 1.5;
+  text-align: center;
+  border-radius: 10%;
+  width: 39px;
+  height: 39px;
 }
-.listsua button{
-    margin: 5px;
+.listsua button {
+  margin: 5px;
 }
-.modal-footer{
-    display: flex;
-    justify-content: space-between;
+.modal-footer {
+  display: flex;
+  justify-content: space-between;
 }
-.btn-secondary{
-    background: rgb(206, 46, 46);
+.btn-secondary {
+  background: rgb(206, 46, 46);
 }
-#exampleModalLabel,#staticBackdropLabel{
-    color: black;
-    font-weight: 600;
+#exampleModalLabel,
+#staticBackdropLabel {
+  color: black;
+  font-weight: 600;
 }
-.modal-header{
-    justify-content: center;
+.modal-header {
+  justify-content: center;
 }
-input{
-    width: 100%;
-    margin: 10px 10px;
+input {
+  width: 100%;
+  margin: 10px 10px;
 }
-select{
-    margin: 10px 10px;
+select {
+  margin: 10px 10px;
+}
+#exampleModalLabel-1 {
+  display: inline-block;
+  border-radius: 4px;
+  background-color: #0d6efd;
+  border: none;
+  color: #ffffff;
+  text-align: center;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+#exampleModalLabel-1 span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+#exampleModalLabel-1 span::after {
+  content: "\00bb";
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+#exampleModalLabel-1:hover span {
+  padding-right: 25px;
+}
+
+#exampleModalLabel-1:hover span:after {
+  opacity: 1;
+  right: 0;
 }
